# Path_tracking_LQR

./: README.md
spido_lqr/: CMakeLists.txt~  package.xml~
spido_lqr/launch/: spido_LQR.launch  spido_LQR2.launch~  spido_TR.launch~  spido_riding.launch
spido_lqr/scripts/: LQR.py  LQR.py~  LQR232323.py~  Reference_traj.py  Reference_traj.py~  TraRef.txt  TrajLQR.txt~  curvature.py  kinematic_single_steering.py~  mat.txt  record.py  record.py~  recordTR.py~  steerLQR10.txt  trace_pose.py  trace_pose.py~
spido_riding/: CMakeLists.txt  CMakeLists.txt~  package.xml~
spido_riding/launch/: spido_LQR.launch  spido_LQR2.launch  spido_LQRss.launch  spido_tracking_LQR.launch  spido_tracking_circle.launch  spido_tracking_kine.launch
spido_riding/scripts/: LQR (copy).py  LQR _single.py  LQR.py  LQR.py~  LQR1.py  LQR2 (copy).py  LQR2.py  LQR232323.py  LQR_bon.py  LQR_droite.py  LQR_fini.py  LQR_nuc.py  LQR_nuc.py~  LQR_old.py  LQR_origin.py  LQR_symbolique.py  LQRss.py  LQRsss.py  kinematic_single_steering.py  record.py  record.py~  record1.py  record_SS.py  single_steering.py  single_steering2.py  single_steering2.py~  steerLQR.txt~
spido_riding/src/: essai ode45  kinematic_single_steering.cpp  spido_riding.cpp  spido_tracking_circle (copy).cpp  spido_tracking_circle.cpp  spido_tracking_line.cpp
spido_riding2/: CMakeLists.txt  package.xml  package.xml~
spido_riding2/launch/: spidoo_LQR.launch  spidoo_LQR.launch~  spidoo_LQRc.launch  spidoo_LQRc.launch~
spido_riding2/scripts/: CornerStiff.py  LQR2.py  LQR2.py~  LQR2C.py  LQR_data.txt  record.py  record.py~
(+3 files in other folders)
